# pyobs-aravis

./: .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.rst  README.md  pyproject.toml  requirements.txt  setup.py
.github/: dependabot.yml
.github/workflows/: pypi.yml  ruff.yml
docs/: Makefile
docs/source/: conf.py  index.rst
pyobs_aravis/: __init__.py  aravis.py  araviscamera.py  gui.py
