[project]
name = "pyobs-aravis"
version = "1.0.0"
description = "pyobs module for Aravis cameras"
authors = [{ name = "Tim-Oliver Husser", email = "thusser@uni-goettingen.de" }]
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "numpy~=1.21",
    "PyGObject~=3.42",
    "pyobs-core~=1.0",
]

[dependency-groups]
dev = [
    "black~=21.12b0",
    "pre-commit~=2.16",
    "Sphinx~=4.4",
    "sphinx-rtd-theme~=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 120
target-version = ['py311']
