[project]
name = "pyobs-aravis"
version = "1.1.3"
description = "pyobs module for Aravis cameras"
authors = [{ name = "Tim-Oliver Husser", email = "thusser@uni-goettingen.de" }]
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "numpy~=1.21",
    "PyGObject~=3.42",
    "pyobs-core~=1.0",
]

[dependency-groups]
dev = [
    "black>=23.7.0,<24",
    "pre-commit>=3.3.3,<4",
    "flake8>=7.3.0",
    "sphinx>=7.1.0,<8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 120
target-version = ['py311']
