[project]
name = "pyobs-aravis"
version = "2.0.0.dev1"
description = "pyobs module for Aravis cameras"
authors = [{ name = "Tim-Oliver Husser", email = "thusser@uni-goettingen.de" }]
requires-python = ">=3.11,<3.14"
license = "MIT"
dependencies = [
    "numpy>=2.2.5,<3",
    "pyobs-core>=2.0.0.dev1,<3",
]

[dependency-groups]
dev = [
    "black>=25.1.0,<26",
    "ruff>=0.9.0",
    "pyrefly>=1.1.1",
    "pre-commit>=4.2.0,<5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 120
target-version = ['py311']

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "G"]
exclude = ["pyobs_aravis/aravis.py"]

[tool.pyrefly]
python-version = "3.11"
project-excludes = ["pyobs_aravis/aravis.py"]
